--- a/views/pages/homePageEn.ejs
+++ b/views/pages/homePageEn.ejs
@@ -275,45 +275,55 @@
       <div class="clients-grid">
         <div class="clients-item">
           <div class="clients-item-content">
-            <img src="/assets/dankal-logo.png" class="icon" alt="דנקל" />
+            <img src="/assets/dankal-logo.png" class="icon" alt="dankal" />
           </div>
         </div>
 
         <div class="clients-item">
           <div class="clients-item-content">
-            <img src="/assets/Olitsky-group-logo.png" class="icon" alt="דנקל" />
+            <img src="/assets/Olitsky-group-logo.png" class="icon" alt="Olitsky Group" />
           </div>
         </div>
 
         <div class="clients-item">
           <div class="clients-item-content">
-            <img src="/assets/intel-logo.png" class="icon" alt="דנקל" />
+            <img src="/assets/intel-logo.png" class="icon" alt="intel" />
           </div>
         </div>
 
         <div class="clients-item">
           <div class="clients-item-content">
-            <img src="/assets/ashdodo-port-logo.png" class="icon" alt="דנקל" />
+            <img src="/assets/ashdodo-port-logo.png" class="icon" alt="ashdodo-port" />
           </div>
         </div>
         <div class="clients-item">
           <div class="clients-item-content">
-            <img src="/assets/SolelBone-logo.png" class="icon" alt="דנקל" />
+            <img src="/assets/SolelBone-logo.png" class="icon" alt="Solel Bone" />
           </div>
         </div>
         <div class="clients-item">
           <div class="clients-item-content">
-            <img src="/assets/telAviv-Logo.png" class="icon" alt="דנקל" />
+            <img src="/assets/telAviv-Logo.png" class="icon" alt="telAviv" />
           </div>
         </div>
         <div class="clients-item">
           <div class="clients-item-content">
-            <img src="/assets/IsraelElectric.png" class="icon" alt="דנקל" />
+            <img src="/assets/IsraelElectric.png" class="icon" alt="Israel Electric" />
           </div>
         </div>
         <div class="clients-item">
           <div class="clients-item-content">
-            <img src="/assets/Danyacebus.png" class="icon" alt="דנקל" />
+            <img src="/assets/Danyacebus.png" class="icon" alt="Danya cebus" />
+          </div>
+          <div class="clients-item">
+            <div class="clients-item-content">
+              <img src="/assets/HCTLogoInitials.png" class="icon" alt="HCT" title="South Port  HCT"/>
+            </div>
+          </div>
+          <div class="clients-item">
+            <div class="clients-item-content">
+              <img src="/assets/merterre-logo.png" class="icon" alt="merterre" />
+            </div>
           </div>
         </div>
       </div>
