--- a/views/partials/enHeader.ejs
+++ b/views/partials/enHeader.ejs
@@ -100,7 +100,7 @@
     </div>
   </div>
   <div class="navbar-mobile-content-wrapper" style="display: none">
-    <div class="menu-icon close" onclick="closeMenu()">
+    <div class="menu-icon close"  onclick="closeMenu()">
       <i class="fa fa-times"></i>
     </div>
     <div class="navbar-mobile">
@@ -114,7 +114,7 @@
             >Home</a
           >
         </li>
-        <li>
+        <!-- <li>
           <a
             name="catalog-section"
             class="menu-link"
@@ -129,7 +129,7 @@
             onclick="scrollToSectionMobile('services-section')"
             >Services</a
           >
-        </li>
+        </li> -->
         <li>
           <a
             name="about-section"
@@ -204,8 +204,9 @@
     setActivePage(sectionId);
 
     closeMenu();
-    const section = document.getElementById(sectionId);
-    section.scrollIntoView({ behavior: "smooth" });
+    // const section = document.getElementById(sectionId);
+    window.location.href = '/homePageEn#' +sectionId;
+    // section.scrollIntoView({ behavior: "smooth" });
   }
   function scrollToSection(sectionId) {
     setActivePage(sectionId);
