--- a/views/pages/homePage.ejs
+++ b/views/pages/homePage.ejs
@@ -24,7 +24,7 @@
           <div class="center-icon">
             <img
             src="/assets/40-years.png"
-              alt="40-years experience icon"
+              alt='מנופי אר.טי בע"מ'
               class="icon-image"
             />
           </div>
