--- a/views/pages/homePageEn.ejs
+++ b/views/pages/homePageEn.ejs
@@ -21,7 +21,7 @@
           <div class="center-icon">
             <img
             src="/assets/40-years.png"
-              alt="Icon"
+              alt="40-years experience icon"
               class="icon-image"
             />
           </div>
